2001-07-09  Alex Graveley  <alex@ximian.com>

	* src/soup-core/soup-socket.c (soup_socket_server_new): Typo to go
	to SETUP_ERROR on error.

2001-07-09  Alex Graveley  <alex@ximian.com>

	* src/soup-core/soup-uri.c (soup_uri_get_protocol): Use
	g_strncasecmp.

	* src/soup-core/soup-transfer.c (soup_transfer_write_cb): ifdef
	wrap all references to SIGPIPE.

	* src/soup-core/soup-ssl.c: ifdef wrap sys/wait.h and sys/socket.h. 
	(soup_ssl_get_iochannel): Do nothing if on windows.

	* src/soup-core/soup-socket.c: Various never-before compiled
	windows cleanups.

	* src/soup-core/soup-misc.c (soup_load_config): ifdef wrap
	SYSCONFDIR souprc loading.

	* src/soup-core/soup-context.c: ifdef wrap sys/socket.h
	(soup_connection_setup_socket): Do nothing if on windows.

	* src/soup-core/soup-auth.c: If on windows include <process.h> for
	getpid().

	* configure.in: Add checks for sys/sockio.h and sys/wait.h

2001-07-09  Alex Graveley  <alex@ximian.com>

	* build/Soup_core.dsp
	  build/Soup_wsdl_runtime.dsp
	  build/Soup_wsdl.dsp: Use unique Debug output directory. 

2001-07-09  Alex Graveley  <alex@ximian.com>

	* build/Soup.dsw
	  build/Soup_apache.dsp
	  build/Soup_core.dsp
	  build/Soup_httpd.dsp
	  build/Soup_ssl_proxy.dsp
	  build/Soup_wsdl.dsp
	  build/Soup_wsdl_runtime.dsp: Initial run of windows build scripts.

2001-07-09  Alex Graveley  <alex@ximian.com>

	* src/soup-core/soup-auth.[ch]: New client authentication (basic/digest)
	code from Joe Shaw (joe@ximian.com).

	* src/soup-core/soup-queue.c (soup_encode_http_auth): Updated to
	use soup-auth.
	(soup_get_request_header): Pass the SoupMessage to
	soup_encode_http_auth instead of just the URI. Check for
	req->action in header creation.
	(soup_queue_error_cb): Reset read_tag and write_tag to avoid
	double free.
	(soup_encode_http_auth): Use soup_auth_authorize().

	* src/soup-core/soup-private.h: Add SoupAuth to SoupContext.

	* src/soup-core/soup-context.c (soup_context_unref): Free auth.
