@@ -31,7 +31,7 @@
 
 typedef enum {
 	SOUP_PROTOCOL_HTTP = 1,
-	SOUP_PROTOCOL_SHTTP,
+	SOUP_PROTOCOL_HTTPS,
 	SOUP_PROTOCOL_SMTP,
 	SOUP_PROTOCOL_SOCKS4,
 	SOUP_PROTOCOL_SOCKS5
